--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.9",
+    "expo": "^47.0.9",
     "expo-status-bar": "~1.4.2",
+    "openai": "^3.1.0",
     "react": "18.1.0",
     "react-native": "0.70.5"
   },
