--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^47.0.9",
+    "@react-navigation/native": "^6.1.1",
+    "@reduxjs/toolkit": "^1.9.1",
+    "expo": "^47.0.6",
     "expo-status-bar": "~1.4.2",
     "openai": "^3.1.0",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-paper": "^5.1.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
