--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/material-bottom-tabs": "^6.2.10",
     "@react-navigation/native": "^6.1.1",
     "@reduxjs/toolkit": "^1.9.1",
     "expo": "^47.0.6",
@@ -17,6 +18,7 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-paper": "^5.1.0",
+    "react-native-vector-icons": "^9.2.0",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
