--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-native": "0.70.5",
     "react-native-paper": "^5.1.0",
     "react-native-vector-icons": "^9.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "react-native-screens": "~3.18.0",
+    "react-native-safe-area-context": "4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
