--- a/package.json
+++ b/package.json
@@ -9,21 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/material-bottom-tabs": "^6.2.10",
     "@react-navigation/native": "^6.1.1",
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
     "expo": "^47.0.6",
     "expo-status-bar": "~1.4.2",
     "openai": "^3.1.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-grid-image-viewer": "^1.3.0",
     "react-native-paper": "^5.1.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.2.0",
-    "redux-persist": "^6.0.0"
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
